<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.hamz.hamzplane.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/planesia"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/vr_padding"
        android:paddingRight="@dimen/hr_padding"
        android:paddingBottom="@dimen/vr_padding"
        android:paddingLeft="@dimen/hr_padding">

        <Button
            android:id="@+id/btnCari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCari"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@color/btnCariColor"
            android:padding="@dimen/btn_padding"
            android:textSize="@dimen/btn_textSize"
            android:textColor="@color/btnCariTextColor"
            android:layout_alignParentBottom="true"/>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@id/btnCari">

            <RelativeLayout
                android:id="@+id/kotaAsal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/departures"/>
                <TextView
                    android:id="@+id/asal1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kotaAsal"
                    android:textSize="@dimen/textAtas"
                    android:layout_toRightOf="@id/img1" />
                <TextView
                    android:id="@+id/tvLokasi1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bandung (BDO)"
                    android:textSize="@dimen/textBawah"
                    android:layout_toRightOf="@id/img1"
                    android:layout_below="@id/asal1"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/horizontal"
                    android:layout_below="@id/tvLokasi1"
                    android:layout_toRightOf="@id/img1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/kotaTujuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/arrivals"/>
                <TextView
                    android:id="@+id/asal2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kotaTujuan"
                    android:textSize="@dimen/textAtas"
                    android:layout_toRightOf="@id/img2" />
                <TextView
                    android:id="@+id/tvLokasi2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jakarta (JKTA)"
                    android:textSize="@dimen/textBawah"
                    android:layout_toRightOf="@id/img2"
                    android:layout_below="@id/asal2"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/horizontal"
                    android:layout_below="@id/tvLokasi2"
                    android:layout_toRightOf="@id/img2"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/go"/>
                <TextView
                    android:id="@+id/asal3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tglBerangkat"
                    android:textSize="@dimen/textAtas"
                    android:layout_toRightOf="@id/img3" />
                <TextView
                    android:id="@+id/tvTanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14 Desember 2017"
                    android:textSize="@dimen/textBawah"
                    android:layout_toRightOf="@id/img3"
                    android:layout_below="@id/asal3"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/horizontal"
                    android:layout_below="@id/tvTanggal"
                    android:layout_toRightOf="@id/img3"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtpenumpang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Penumpang"
                    android:textSize="@dimen/textAtas"/>

                <LinearLayout
                    android:layout_below="@id/txtpenumpang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_centerHorizontal="true"
                            android:id="@+id/icon1"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_person_black_24dp"/>
                        <TextView
                            android:id="@+id/jmlDewasa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textSize="@dimen/textBawah"
                            android:layout_toRightOf="@id/icon1"/>
                        <TextView
                            android:id="@+id/txtdewasa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Dewasa"
                            android:textSize="@dimen/textAtas"
                            android:layout_below="@id/icon1"
                            android:layout_centerHorizontal="true"/>
                        <TextView
                            android:id="@+id/usiaDewasa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/usiaDewasa"
                            android:textSize="@dimen/textAtas"
                            android:layout_below="@id/txtdewasa"
                            android:layout_centerHorizontal="true"/>
                        <ImageView
                            android:id="@+id/btnDewasaPlus"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_below="@id/usiaDewasa"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_add_black_24dp"
                            android:padding="5dp"
                            android:background="@color/colorPrimaryDark"/>
                        <ImageView
                            android:id="@+id/btnDewasaMin"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_below="@id/usiaDewasa"
                            android:layout_toLeftOf="@id/btnDewasaPlus"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/ic_remove_black_24dp"
                            android:padding="5dp"
                            android:background="@color/colorPrimaryDark"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_centerHorizontal="true"
                            android:id="@+id/icon2"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_person_black_24dp"/>
                        <TextView
                            android:id="@+id/jmlAnak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="@dimen/textBawah"
                            android:layout_toRightOf="@id/icon2"/>
                        <TextView
                            android:id="@+id/txtanak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Anak"
                            android:textSize="@dimen/textAtas"
                            android:layout_below="@id/icon2"
                            android:layout_centerHorizontal="true"/>
                        <TextView
                            android:id="@+id/usiaAnak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/usiaAnak"
                            android:textSize="@dimen/textAtas"
                            android:layout_below="@id/txtanak"
                            android:layout_centerHorizontal="true"/>
                        <ImageView
                            android:id="@+id/btnAnakPlus"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_below="@id/usiaAnak"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_add_black_24dp"
                            android:padding="5dp"
                            android:background="@color/colorPrimaryDark"/>
                        <ImageView
                            android:id="@+id/btnAnakMin"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_below="@id/usiaAnak"
                            android:layout_toLeftOf="@id/btnAnakPlus"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/ic_remove_black_24dp"
                            android:padding="5dp"
                            android:background="@color/colorPrimaryDark"/>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>



        </LinearLayout>



    </RelativeLayout>
</LinearLayout>
